--- a/package.json
+++ b/package.json
@@ -4,14 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch /src/sever.ts"
+    "dev": "tsx watch --env-file .env  /src/sever.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.12.2",
+    "prisma": "^5.11.0",
     "tsx": "^4.7.1",
     "typescript": "^5.4.3"
+  },
+  "dependencies": {
+    "@prisma/client": "^5.11.0",
+    "fastify": "^4.26.2",
+    "zod": "^3.22.4"
   }
 }
